# minGPT

./: .gitignore  pyproject.toml  requirements-dp.txt  requirements.txt  setup.py
mingpt/: __init__.py  model.py  trainer.py  utils.py
